plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'com.yogit'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Swagger
	implementation 'io.springfox:springfox-boot-starter:3.0.0'

	// 메이븐 애플 로그인 플젝에서 가져온 것
	implementation 'org.apache.httpcomponents:httpclient'
	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava.options.compilerArgs.addAll([
		"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
		"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
		"--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
])
